# 3d-coin-maker

./: .env.example  .gitignore  .gitmodules  .npmrc  CLAUDE.md  DOCKER.md  Makefile  README-DEPLOYMENT.md  README.md  dc-dev.sh  debug-desktop.py  default.ini  docker-compose.apscheduler.yml  docker-compose.dev.apscheduler.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  io.github.coinmaker.CoinMaker.desktop  io.github.coinmaker.CoinMaker.metainfo.xml  io.github.coinmaker.CoinMaker.yaml  just-refactor.md  justfile  refactor.md  test-stl-generation.py
backend/: Dockerfile  Dockerfile.prod  README.md  __init__.py  app_factory.py  celery_app.py  coin-maker.spec  constants.py  desktop_main.py  fastapi_dependencies.py  fastapi_main.py  fastapi_models.py  fastapi_settings.py  main.py  manage.py  pyproject.toml  pyrightconfig.json  web_main.py
backend/api/: __init__.py  dependencies.py  models.py  route_utils.py
backend/api/routes/: __init__.py  download.py  generation.py  health.py  preview.py  processing.py  router.py  status.py  upload.py
backend/apps/: __init__.py  desktop_app.py  web_app.py
backend/apps/api/: serializers.py  urls.py  views.py
backend/apps/processing/: tasks.py
backend/coin_maker/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/config/: __init__.py  config_loader.py  desktop_settings.py  factory.py  settings.py
backend/core/: apps.py  base_app.py  constants.py  logging_config.py  models.py  service_container.py
backend/core/containers/: application.py  compat.py
backend/core/interfaces/: image_processor.py  rate_limiter.py  stl_generator.py  storage.py  task_queue.py
backend/core/services/: apscheduler_task_queue.py  celery_task_queue.py  coin_generation_service.py  file_storage.py  hmm_manifold_generator.py  image_processor.py  memory_rate_limiter.py  openscad_generator.py  path_resolver.py  redis_rate_limiter.py  smart_rate_limiter.py  task_functions.py
backend/core/services/desktop/: __init__.py  port_manager.py  pywebview_wrapper.py  sveltekit_server.py
backend/core/templates/: coin_template.scad
backend/core/utils/: __init__.py  progress_utils.py
backend/data/generations/eabf53d3-4781-483e-b1e5-2992e3acf3a9/: coin.stl
backend/tests/: test_integration.py
backend/workers/: __init__.py  celery_app.py  celery_main.py
build-scripts/: Dockerfile.appimage  appimage.mk  backend.mk  config.mk  create-pyinstaller-spec.py  dependencies.just  deps-system.mk  deps.mk  desktop-artifacts.just  desktop.just  desktop.mk  docker.just  docker.mk  frontend.just  frontend.mk  make-output.mk  packaging.just  run.just  smoke-test.just  smoke-tests.just  utilities.just  vars.mk
config/: backend.base.env  backend.dev.env  backend.development.env  backend.env  backend.production.env  frontend.base.env  frontend.dev.env  frontend.development.env  frontend.env  frontend.production.env
data/generations/: .gitkeep
desktop/: README.md  __init__.py  desktop_app.py  desktop_main.py  pyproject.toml  pyrightconfig.json
desktop/desktop_config/: __init__.py  desktop_settings.py  factory.py
desktop/services/: __init__.py  desktop_service_container.py  port_manager.py  pywebview_wrapper.py  unlimited_rate_limiter.py
docs/: deployment-development.md  deployment-docker.md  installation.md  refactor.md
docs/dev/: desktop_app_migration.md  fastapi_migration_analysis.md  fastapi_migration_comparison.md  plan.md  quality.md  refactor.md
frontend/: Dockerfile  Dockerfile.dev  README.md  nginx.conf  node_modules  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: CanvasViewer.svelte  CoinParametersControls.svelte  HeightmapPositioningControls.svelte  ImageProcessingControls.svelte  ImageUpload.svelte  STLViewer.svelte  TabControl.svelte  api.ts  imageProcessor.ts
frontend/src/lib/components/: MainLayout.svelte  TabContentViewer.svelte  WorkflowActions.svelte
frontend/src/lib/services/: BackendService.ts  CoordinateService.ts  DragFeedbackController.ts  EventHandlersService.ts  GenerationService.ts  ImageProcessingService.ts  ImageProcessingWorkerService.ts  index.ts
frontend/src/lib/stores/: coinParametersState.ts  generationState.ts  imageProcessingState.ts  index.ts  uiState.ts
frontend/src/lib/styles/: index.scss  mixins.scss  utilities.scss  variables.scss
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
scripts/: dev-all.sh  dev-backend.sh  dev-frontend.sh  prod-deploy.sh  run-wrapper.sh  setup-env.sh
tests/: __init__.py  requirements.txt
tests/smoke/: README.md  __init__.py  base_test.py  cli.py  component_test.py  config_detector.py  conftest.py  desktop_test.py  devtools_client.py  direct_test.py  quick_test.py  simple_test.py  test_runner.py  test_smoke.py
(+1 files in other folders)
